styles/start.css
.start {
    width: 60%;
    margin: 0 20% 0 20%;
    padding-top: 14vh;
    /* transform: translateX(-65%); */
    transition: 1s cubic-bezier(0.33, 0.15, 1, 0.24);

    /* transform: translateX(-60%) scale(600);*/
}

.start-logo {
    margin-bottom: 40px;
    transition: 1s ease;
}

.start-title {
    font-family: 'Segoe UI', Tahoma, sans-serif;
    font-size: 1.5em;
    font-weight: 500;
    line-height: 1.25em;
    color: rgb(32, 33, 36);
    margin-top: 0px;
    height: 30px;
    transition: 1s ease;
}

.start-p {
    font-family: 'Segoe UI', Tahoma, sans-serif;
    font-size: 0.95em;
    line-height: 1.6em;
    color: rgb(95, 99, 104);
    transition: 1s ease;
}

.start-a {
    color:rgb(26, 115, 232);
    text-decoration: none;
    font-family: 'Segoe UI', Tahoma, sans-serif;
    line-height: 1.6em;
    transition: 1s ease;
}

.start-p-little {
    font-family: 'Segoe UI', Tahoma, sans-serif;
    font-size: .75em;
    line-height: 1.6em;
    color: rgb(95, 99, 104);
    margin-bottom: 0;
    transition: 1s ease;
}

.start-button {
    border: 0;
    border-radius: 4px;
    cursor: pointer;
    margin: 0;
    padding: 8px 16px;
    color: white;
    background-color: rgb(26, 115, 232);
    margin-top: 51px;
    transition: 1s ease;
}

.glitch-up {
    position: relative;
    top: 10px;
}

.glitch-down {
    position: relative;
    top: -12px;
}

span {
    position: relative;
}

@media screen and (max-width: 480px) {
    .start {
        margin: 0 auto 0 10%;
        width: 80%;
    }
    .start-title {
        margin-bottom: 40px;
    }
}

